# wordle

./: Cargo.toml  HONOR-CODE.md  README.md
.github/workflows/: rust.yml
src/: func.rs  main.rs
