[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
serde_json = "1.0"
console = "0.15"
rand = "0.8.0"
serde = { version = "1.0.126", features = ["derive"] }
fltk = "1"

[build-dependencies]
fl2rust = "0.4"

[dev-dependencies]
lazy_static = "1.0"
assert-json-diff = "2.0"
ntest = "0.8"
pretty_assertions = "1.2.1"

[[bin]]
name="gui"


